# unityrimetest

dll_component/: CMakeLists.txt  README.md  build.sh  rime_dll.cpp  rime_dll.h  test_dll.cpp
docs/: API_REFERENCE.md  DEPLOYMENT.md  INSTALLATION.md  README.html  README.md  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/examples/: BasicInputExample.cs
docs/tests/: README.md  benchmark_results.json  performance_benchmark.py  test_integration.py
examples/: AdvancedInputExample.cs  README.md
python_component/: README.md  ipc_server.py  requirements.txt  rime_wrapper.py
unity_scripts/: README.md  RimeDLLWrapper.cs  RimeInputManager.cs  RimePythonWrapper.cs
